crates/tych/src/tests/snapshots/invalid_bad.snap
---
source: crates/tych/src/tests.rs
assertion_line: 793
expression: "(test[1], res)"
---
- "let x: blah"
- Err: "Unknown type in declaration: blah"

