crates/tych/src/tests/snapshots/invalid_for_bad.snap
---
source: crates/tych/src/tests.rs
assertion_line: 971
expression: "(test[1], res)"
---
- "\nfn main() {\n    for x: bad; x < 1; 1 { }\n}\n"
- Err: "unknown type for start declaration in for loop: `bad`"

