crates/tych/src/tests/snapshots/invalid_good.snap
---
source: crates/tych/src/tests.rs
assertion_line: 793
expression: "(test[1], res)"
---
- "\nstruct Foo {}\nfn main() {\n    let x: int\n    let y: Foo\n    let z: Bar\n}\nstruct Bar {}\n"
- Ok:
    nodes:
      - kind:
          Struct:
            name: Foo
            fields: []
            methods: []
      - kind:
          Fn:
            proto:
              name: main
              args: []
              ret_ty: Void
              is_extern: false
            body:
              kind:
                Block:
                  list:
                    - kind:
                        Let:
                          name: x
                          antn: Int32
                          init: ~
                    - kind:
                        Let:
                          name: y
                          antn:
                            Comp: Foo
                          init: ~
                    - kind:
                        Let:
                          name: z
                          antn:
                            Comp: Bar
                          init: ~
                  ty: Void
      - kind:
          Struct:
            name: Bar
            fields: []
            methods: []

