crates/tych/src/tests/snapshots/invalid_let_bad.snap
---
source: crates/tych/src/tests.rs
assertion_line: 971
expression: "(test[1], res)"
---
- "let x: blah"
- Err: "unknown type in let declaration: `blah`"

