crates/tych/src/tests/snapshots/invalid_proto_arg_bad.snap
---
source: crates/tych/src/tests.rs
assertion_line: 809
expression: "(test[1], res)"
---
- "fn main(a: int, b: inti) { }"
- Err: "Unknown argument type in prototype for `b`: `inti`"

