crates/tych/src/tests/snapshots/invalid_proto_ret_bad.snap
---
source: crates/tych/src/tests.rs
assertion_line: 809
expression: "(test[1], res)"
---
- "fn main() -> Foo { }"
- Err: "Unknown return type in prototype for `main`: `Foo`"

