crates/tych/src/tests/snapshots/let_lit_antn_mismatch.snap
---
source: crates/tych/src/tests.rs
assertion_line: 534
expression: "(test[1], res)"
---
- "\nfn foo() {\n    let x: int = 3.0\n}\n"
- Err: Literal is a float in an integer context

