crates/tych/src/tests/snapshots/scope_if_else_scope.snap
---
source: crates/tych/src/tests.rs
assertion_line: 614
expression: "(test[1], res)"
---
- "\nlet x: float = 1.0\nif x < 2.0 {\n    let y: int = 2\n    x\n} else {\n    -y\n}\n"
- Err: "Unknown variable: `y`"

